# kCrash

./: .gitignore  256a53d3-a570-43fe-ce8cd79c-58bd6d70.dmp  README.md  crash.txt  minidump_stackwalk  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/paozhuanyinyu/kcrash/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  demo.cpp
app/src/main/java/com/paozhuanyinyu/kcrash/: JavaCrashTest.java  MainActivity.java  MyApplication.java  NativeCrashTest.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/paozhuanyinyu/kcrash/: ExampleUnitTest.java
crash/: build.gradle
crash/src/androidTest/java/com/paozhuanyinyu/crash/: ExampleInstrumentedTest.java
crash/src/main/: AndroidManifest.xml
crash/src/main/cpp/: CMakeLists.txt  kcrash.cpp
crash/src/main/cpp/breakpad/: CMakeLists.txt
crash/src/main/java/com/paozhuanyinyu/crash/: CrashHandler.java  CrashManager.java
crash/src/test/java/com/paozhuanyinyu/crash/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
